Rename occurr. of "arbeitszeitapp" in user facing strings
see #1314

--- a/src/workers_control/flask/templates/auth/start.html
+++ b/src/workers_control/flask/templates/auth/start.html
@@ -4,10 +4,10 @@
 <div class="section is-medium has-text-centered">
   <h1 class="title">
     <!-- do not translate -->
-    Arbeitszeit
+    Workers Control
   </h1>
   <h2 class="subtitle">
-    {{ gettext('A platform for working time calculation.') }}
+    {{ gettext('A platform for labour time calculation.') }}
   </h2>
   <div class="buttons is-centered">
     <a class="button" href="{{ url_for('auth.login_member') }}">{{ gettext('Member') }}</a>
