--- a/src/workers_control/flask/templates/auth/unconfirmed_company.html
+++ b/src/workers_control/flask/templates/auth/unconfirmed_company.html
@@ -3,10 +3,10 @@
 {% block content %}
 <div class="section is-medium has-text-centered">
     <h1 class="title">
-        Arbeitszeit
+        Workers Control
     </h1>
     <h2 class="subtitle">
-        {{ gettext("A platform for working time calculation.") }}
+        {{ gettext("A platform for labour time calculation.") }}
     </h2>
 
 
