--- a/src/workers_control/flask/templates/macros/anonymous_navigation.html
+++ b/src/workers_control/flask/templates/macros/anonymous_navigation.html
@@ -8,7 +8,7 @@
       <a href="{{ url_for('auth.start') }}"
          class="navbar-item"
          >
-        Arbeitszeitapp
+        Workers Control
       </a>
     </div>
 
