--- a/src/workers_control/flask/templates/user/request_email_change_notification.html
+++ b/src/workers_control/flask/templates/user/request_email_change_notification.html
@@ -1,4 +1,4 @@
-{{ gettext("Dear Arbeitszeitapp user,
+{{ gettext("Dear user of the Workers Control app,
 
 someone tried to change the email address for your user account. If this was you please visit the following link to confirm this change.") }}
 
