--- a/src/workers_control/flask/templates/base.html
+++ b/src/workers_control/flask/templates/base.html
@@ -12,7 +12,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- do not translate -->
-  <title>Arbeitszeit</title>
+  <title>Workers Control</title>
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='bulma.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
