--- a/src/workers_control/flask/templates/user/request_email_change_warning.html
+++ b/src/workers_control/flask/templates/user/request_email_change_warning.html
@@ -1,4 +1,4 @@
-{{ gettext("Dear Arbeitszeitapp user,
+{{ gettext("Dear user of the Workers Control app,
 
 someone tried to change the email address for your user account. If this was not you, please contact the administrators of the app.") }}
 {% if admin_email_address %}
