Link to psf account in global statistics

--- a/src/workers_control/flask/templates/user/statistics.html
+++ b/src/workers_control/flask/templates/user/statistics.html
@@ -42,6 +42,7 @@
             <div class="box">
                 <h1 class="title">{{ view_model.psf_balance }}</h1>
                 <div class="subtitle">{{ gettext("Balance for Public Sector Fund (PSF)") }}</div>
+                <a href="{{ view_model.psf_account_url }}">{{ gettext("Go to account details") }}</a>
             </div>
         </div>        
     </div>
