--- a/src/workers_control/flask/templates/user/statistics.html
+++ b/src/workers_control/flask/templates/user/statistics.html
@@ -36,6 +36,7 @@
             <div class="box">
                 <h1 class="title">{{ view_model.payout_factor }}</h1>
                 <div class="subtitle">{{ gettext("FIC (Payout factor)") }}</div>
+                <a href="{{ view_model.payout_factor_details_url }}">{{ gettext("Go to details") }}</a>
             </div>
         </div>
         <div class="cell has-text-centered">
